More bugs squashed

--- a/src/components/movie-card/MovieCard.module.scss
+++ b/src/components/movie-card/MovieCard.module.scss
@@ -11,14 +11,14 @@
     display: block;
     margin: 0 auto;
     margin-top: 2vh;
-    max-height: 23vh;
+    max-height: 27vh;
 }
   
 .movieName {
   margin-top: 10px;
   text-align: center;
   font-family: 'Roboto';
-  font-size: 2vw;
+  font-size: 1.5vw;
 }
   
 .director,
